tests/rosetta/out/Smalltalk/anonymous-recursion.out
/tmp/anonymous-recursion.st:9: parse error, expected ']'
