tests/rosetta/out/Smalltalk/anonymous-recursion.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| fib main i |
fib := [:n | ((n < 2)) ifTrue: [
n.
] .
((fib value: (n - 1)) + (fib value: (n - 2))). ].
main := [ i := -1.
[(i <= 10)] whileTrue: [.
((i < 0)) ifTrue: [
Transcript show: (((('fib(' + ((i asString)))) + (') returned error: negative n is forbidden'))) printString; cr.
] ifFalse: [
Transcript show: (((((('fib(' + ((i asString)))) + (') = '))) + ((fib value: i asString)))) printString; cr.
].
i := (i + 1).
].
. ].
main value.
